--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -3,35 +3,46 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_margin="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/back_smoke">
+
         <FrameLayout
             android:layout_margin="12dp"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:background="@drawable/back_back_round">
+
             <FrameLayout
                 android:id="@+id/StateRound"
                 android:layout_gravity="bottom|right"
                 android:layout_width="20dp"
                 android:layout_height="20dp"/>
         </FrameLayout>
+
         <LinearLayout
             android:layout_gravity="center"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/ItemName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"/>
+
             <TextView
                 android:id="@+id/ItemState"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textColor="@android:color/darker_gray"/>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
