--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -40,12 +40,12 @@
 
         <EditText
             android:id="@+id/AgeTextView"
-            android:hint="Возраст"
+            android:maxLines="1"
             android:inputType="number"
+            android:hint="@string/ageHint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"/>
-
         <Button
             android:id="@+id/saveButton"
             android:onClick="saveUserInfo"
