--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,15 @@
                     android:layout_marginTop="50dp"
                     android:layout_width="50dp"
                     android:layout_height="50dp" />
+                <Button
+                    android:id="@+id/editButton"
+                    android:onClick="EditUser"
+                    android:background="@drawable/baseline_edit_24"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
